--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav ul li {
 
 nav a {
     text-decoration: none;
-    color: #fff;
+    color: #FF2323;
 }
 
 /* Style the main content */
@@ -37,5 +37,5 @@ footer {
     text-align: center;
     padding: 10px;
     background-color: #333;
-    color: #fff;
+    color: #FF2323;
 }
