--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body, h1, h2, p {
 /* Style the header */
 header {
     background-color: #333;
-    color: #FF2323;
+    color: #FFF;
     text-align: center;
     padding: 20px;
 }
